--- a/index.html
+++ b/index.html
@@ -90,14 +90,13 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Cumpleaños:</strong> <span>31 Mayo 2003</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Cumpleaños:</strong> <span>31 Mayo</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Telefono:</strong> <span>+51 916 832 052</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>Lima, Perú</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Edad:</strong> <span>18</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Grado:</strong> <span>Intermedio</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Gmail:</strong> <span>youlserf@gmail.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Disponible</span></li>
@@ -398,7 +397,7 @@
             <i class="bx bx-share-alt"></i>
             <h3>Redes sociales</h3>
             <div class="social-links">
-              <a href="https://www.linkedin.com/in/youlserf-cardenas/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/ /" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
