--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Cumpleaños:</strong> <span>31 Mayo</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Cumpleaños:</strong> <span>31 de Mayo</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Telefono:</strong> <span>+51 916 832 052</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>Lima, Perú</span></li>
               </ul>
