--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
             <i class="bx bx-share-alt"></i>
             <h3>Redes sociales</h3>
             <div class="social-links">
-              <a href="https://www.linkedin.com/in/ /" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/youlserf-cardenas/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
